--- a/JEE6/FacesTest/.settings/org.eclipse.wst.common.component
+++ b/JEE6/FacesTest/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,9 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/WebContent"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src-gen"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/res-gen"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/backend-gen"/>
         <property name="context-root" value="FacesTest"/>
         <property name="java-output-path" value="/FacesTest/WebContent/WEB-INF/classes"/>
     </wb-module>
