--- a/JEE6/FacesTest/.settings/org.eclipse.wst.common.component
+++ b/JEE6/FacesTest/.settings/org.eclipse.wst.common.component
@@ -7,6 +7,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src-gen"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/res-gen"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/backend-gen"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/test"/>
         <property name="context-root" value="FacesTest"/>
         <property name="java-output-path" value="/FacesTest/WebContent/WEB-INF/classes"/>
     </wb-module>
