--- a/JEE6/FacesTest/WebContent/resources/css/display.css
+++ b/JEE6/FacesTest/WebContent/resources/css/display.css
@@ -17,7 +17,9 @@ a:VISITED {
 }
 
 textarea {
-	
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 h1, h2, h3 {
@@ -27,7 +29,7 @@ h1, h2, h3 {
 
 table, tr, td, th {
 	text-align: left;
-	mrgin: 0px;
+	margin: 0px;
 	padding: 3px;
 	vertical-align: top;
 }
@@ -72,13 +74,8 @@ td.mid {
 }
 
 input, select, textarea {
-	border-radius: 3px
-}
-
-.itemis_blue
-{
-	color: #004c84;
-	border-color: #004c84;
+	border-radius: 3px;
+	vertical-align: middle;
 }
 
 div.box {
@@ -175,7 +172,7 @@ table.list {
 	border-style: solid;
 	border-color: #004c84;
 	border-width: 1px;
-	border-radius: 4px
+	border-radius: 4px;
 }
 
 #mid {
