--- a/JEE6/de.itemis.jee6.updatesite/templates/web/site.css
+++ b/JEE6/de.itemis.jee6.updatesite/templates/web/site.css
@@ -69,10 +69,10 @@ STYLE type ="text/css">td.spacer {
 	color: #187dc6;
 }
 
-.td_header {
+/*.td_header {
 	background: url("https://www.jboss.org/dms/tools/images/tools-banner.png") 0 no-repeat;
 	height: 100px;
-}
+}*/
 
 .column-header {
 	font-size:small;
