--- a/JEE6/de.itemis.jee6.website/website/css/jeegenerator.css
+++ b/JEE6/de.itemis.jee6.website/website/css/jeegenerator.css
@@ -29,13 +29,13 @@ nav.metamenu ul li a:hover { color: #00457C; }
 header div#slogan,
 header div#headline {
   color: #ffffff;
-background: -moz-linear-gradient(left, rgba(0,69,124,0.95) 0%, rgba(51,106,150,0.95) 50%, rgba(0,69,124,0.95) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,69,124,0.95)), color-stop(50%,rgba(51,106,150,0.95)), color-stop(100%,rgba(0,69,124,0.95))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(left, rgba(0,69,124,0.95) 0%,rgba(51,106,150,0.95) 50%,rgba(0,69,124,0.95) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(left, rgba(0,69,124,0.95) 0%,rgba(51,106,150,0.95) 50%,rgba(0,69,124,0.95) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(left, rgba(0,69,124,0.95) 0%,rgba(51,106,150,0.95) 50%,rgba(0,69,124,0.95) 100%); /* IE10+ */
-background: linear-gradient(to right, rgba(0,69,124,0.95) 0%,rgba(51,106,150,0.95) 50%,rgba(0,69,124,0.95) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f200457c', endColorstr='#f200457c',GradientType=1 ); /* IE6-9 */
+  background: -moz-linear-gradient(left, rgba(0,69,124,0.95) 0%, rgba(51,106,150,0.95) 50%, rgba(0,69,124,0.95) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,69,124,0.95)), color-stop(50%,rgba(51,106,150,0.95)), color-stop(100%,rgba(0,69,124,0.95))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(left, rgba(0,69,124,0.95) 0%,rgba(51,106,150,0.95) 50%,rgba(0,69,124,0.95) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(left, rgba(0,69,124,0.95) 0%,rgba(51,106,150,0.95) 50%,rgba(0,69,124,0.95) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(left, rgba(0,69,124,0.95) 0%,rgba(51,106,150,0.95) 50%,rgba(0,69,124,0.95) 100%); /* IE10+ */
+  background: linear-gradient(to right, rgba(0,69,124,0.95) 0%,rgba(51,106,150,0.95) 50%,rgba(0,69,124,0.95) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f200457c', endColorstr='#f200457c',GradientType=1 ); /* IE6-9 */
   background-color: #00457C;
 }
 
@@ -112,9 +112,13 @@ figcaption {
    
 #maincontainer h3 {	margin-bottom: 0px; }
 
-#maincontainer img { max-width: 100%; }
+div#aboutUsImage img { max-width: 200px; }
 
-
+div #aboutUsImage {
+	float: left;
+	margin: 0 30px 20px 0;
+	border: 1px solid #BBBBBB;
+}
 
 
 
@@ -133,13 +137,10 @@ body.services #maincontainer ul { margin-right: 50px; }
 
 div.illustration { position: relative; }
 
-
-
-
 div.img-container {
 	padding: 20px 0px;	
 	text-align: center;
-  border: 1px solid #ccc;
+	border: 1px solid #ccc;
   
 	-webkit-border-radius: 15px;
 	-moz-border-radius: 15px;
