* Farben auf der Download seite von Rot auf Blau  * Dominik in AboutUs eingefügt
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@433 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.website/website/css/jeegenerator.css
+++ b/JEE6/de.itemis.jee6.website/website/css/jeegenerator.css
@@ -285,7 +285,7 @@ table.table td {
 /* 	line-height: 18px; */
 }
 .pricing a {
-    color: #AA1111;
+    color: #00457C;
     text-decoration: none;
 }
 
