--- a/JEE6/de.itemis.jee6.website/website/css/jeegenerator.css
+++ b/JEE6/de.itemis.jee6.website/website/css/jeegenerator.css
@@ -289,6 +289,16 @@ table.table td {
     text-decoration: none;
 }
 
+/*  ==========================================================================
+	Dokumentation
+	========================================================================== */
+#header_wrapper {
+	font-size: .75em;
+	line-height: .75;
+}
+
+
+
 /* ==|== media queries ======================================================
    EXAMPLE Media Query for Responsive Design.
    This example overrides the primary ('mobile first') styles
