--- a/JEE6/de.itemis.jee6.website/website/css/jeegenerator.css
+++ b/JEE6/de.itemis.jee6.website/website/css/jeegenerator.css
@@ -178,14 +178,14 @@ table.table td {
 }
 
 /*  ==========================================================================
-	Pricing
+	Downloadbox
 	========================================================================== */
 
 .clearfix {
 	clear: both;
 }
 
-.pricing {
+.downloadbox {
     -moz-border-bottom-colors: none;
     -moz-border-left-colors: none;
     -moz-border-right-colors: none;
@@ -207,14 +207,14 @@ table.table td {
 	margin-left: 10px;
 }
 
-.pricing table {
+.downloadbox table {
     color: #C0C2C2;
     font-family: 'Lato',sans-serif;
     font-size: 12px;
     font-weight: 400;
     width: 40%;
 }
-.pricing thead th {
+.downloadbox thead th {
     background: none repeat scroll 0 0 #333333;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
@@ -227,14 +227,14 @@ table.table td {
     text-transform: uppercase;
     width: 84.3%;
 }
-.pricing tfoot td {
+.downloadbox tfoot td {
     background: none repeat scroll 0 0 #EDEDED;
     border-bottom-left-radius: 6px;
     border-bottom-right-radius: 6px;
     padding: 20px 8%;
     width: 84.3%;
 }
-.pricing td {
+.downloadbox td {
     background: none repeat scroll 0 0 #FFFFFF;
     border-bottom: 1px solid #D4D4D4;
     border-top: 1px solid #FFFFFF;
@@ -243,7 +243,7 @@ table.table td {
     width: 84.3%;
 }
 
-.pricing td.focus {
+.downloadbox td.focus {
     background: none repeat scroll 0 0 #333333;
     border-bottom: 1px solid #D4D4D4;
     color: #FFFFFF;
@@ -255,7 +255,7 @@ table.table td {
     width: 84.3%;
 }
 
-.pricing td.focus span {
+.downloadbox td.focus span {
     display: block;
     font-size: 10px;
     margin-top: 5px;
@@ -284,7 +284,7 @@ table.table td {
 /* 	font-size: 13px; */
 /* 	line-height: 18px; */
 }
-.pricing a {
+.downloadbox a {
     color: #00457C;
     text-decoration: none;
 }
@@ -297,6 +297,9 @@ table.table td {
 	line-height: .75;
 }
 
+#header_wrapper li {
+	list-style: none;
+}
 
 
 /* ==|== media queries ======================================================
