* neue Button  * "top" Buttons in der Dokumentation
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@447 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.website/website/css/general.css
+++ b/JEE6/de.itemis.jee6.website/website/css/general.css
@@ -648,14 +648,15 @@ div#stage {
   color: #777;
   font-size: 16px;
 }
-#stage .tour_next a {
-	position: relative;
-	display: block;
-	left: 0px;
-	padding: 15px 0 11px 30px;
-	background: none no-repeat scroll 0 0 #ddd;  /* more-button.png, transparent */
-}
-#stage .tour_next a:hover { background-position: 0 -48px; }
+
+/* #stage .tour_next a { */
+/* 	position: relative; */
+/* 	display: block; */
+/* 	left: 0px; */
+/* 	padding: 15px 0 11px 30px; */
+/* 	background: none no-repeat scroll 0 0 #ddd;  more-button.png, transparent */
+/* } */
+/* #stage .tour_next a:hover { background-position: 0 -48px; } */
 
 
 
