--- a/JEE6/de.itemis.jee6.website/website/css/general.css
+++ b/JEE6/de.itemis.jee6.website/website/css/general.css
@@ -32,7 +32,7 @@ body {
   background: white no-repeat;
   background-position: center top;
   margin: 0;
-  
+  font-size: 140%;
   line-height: 1.4;
 }
 
