* update der Seite
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@611 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Website/de.itemis.jee.websitenew/_layouts/download.html
+++ b/Website/de.itemis.jee.websitenew/_layouts/download.html
@@ -14,98 +14,97 @@ download:
  lin32: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-kepler-linux-gtk.tar.gz
 ---
 <div id="page">
-<div class="container clearfix">
-	<h2>Download</h2>
-
-	<hr>
-	<!--table one starts-->
-	<div class="span1">&nbsp;</div>
-    <div class="span4">
-		    <table class="pricing">
-				<tfoot>
+<div class="downloads">
+	<div class="container clearfix">
+		<!--table one starts-->
+		<div class="span1">&nbsp;</div>
+	    <div class="span4">
+			    <table class="pricing">
+					<tfoot>
+					    <tr>
+							<td></td>
+					    </tr>
+					</tfoot>
+					<tbody>
 				    <tr>
-						<td></td>
-				    </tr>
-				</tfoot>
-				<tbody>
-			    <tr>
-					<td class="focus">Update Sites <span>Use Update Manager in Eclipse</span></td>
-			    </tr>
-			    <tr>
-			    	<td style="text-align: center;">
-			    	<a
-			    	rel="popover"
-			    	data-content="This is an Eclipse update site URL, which you need to paste into the update manager within Eclipse!"
-			    	data-original-title="Right-click and 'Copy Link'"
-			    	href="{{page.updateSite.release}}"
-			    	class="has-popover btn btn-primary btn-large"
-			    	style="width: 70%;">Latest Release</a></td>
-			    </tr>
-			    <tr>
-					<td style="text-align: center;">
-					<a
-					  rel="popover"
-			    	data-content="This is an Eclipse update site URL, which you need to paste into the update manager within Eclipse!"
-			    	data-original-title="Right-click and 'Copy Link'"
-					  href="{{page.updateSite.milestone}}"
-			    	class="has-popover btn btn-primary btn-large"
-			    	style="width: 70%;">Latest Milestone</a></td>
-			    </tr>
-			    <tr>
-					<td style="text-align: center;">
-					<a
-						rel="popover"
-			    	data-content="This is an Eclipse update site URL, which you need to paste into the update manager within Eclipse!"
-			    	data-original-title="Right-click and 'Copy Link'"
-						href="{{page.updateSite.bleeding}}"
-			    	class="has-popover btn btn-primary btn-large"
-			    	style="width: 70%;">Bleeding Edge!</a></td>
-			    </tr>
-			</tbody>
-		    </table>
-    </div>
-    <div class="span1">&nbsp;</div>
-    <div class="span4">
-		    <table class="pricing">
-				<tfoot>
-				    <tr>
-						<td></td>
-				    </tr>
-				</tfoot>
-				<tbody>
-				    <tr>
-						<td class="focus">Full Eclipse <span>Just Download and Unzip</span></td>
+						<td class="focus">Update Sites <span>Use Update Manager in Eclipse</span></td>
 				    </tr>
 				    <tr>
-				    	<td style="text-align: center; white-space: nowrap;">
-				    	<a href="{{page.download.osx64}}"
-				    	class="btn btn-primary btn-large" style="width: 45%;">OS X 64 Bit</a>&nbsp;
-				    	<a href="{{page.download.osx32}}"
-				    	class="btn btn-primary btn-large"
-				    	style="width:20%;">32 Bit</a></td>
+				    	<td style="text-align: center;">
+				    	<a
+				    	rel="popover"
+				    	data-content="This is an Eclipse update site URL, which you need to paste into the update manager within Eclipse!"
+				    	data-original-title="Right-click and 'Copy Link'"
+				    	href="{{page.updateSite.release}}"
+				    	class="has-popover btn btn-primary btn-large"
+				    	style="width: 70%;">Latest Release</a></td>
 				    </tr>
 				    <tr>
-				    	<td style="text-align: center; white-space: nowrap;">
-				    	<a href="{{page.download.lin64}}"
-				    	class="btn btn-primary btn-large"
-				    	style="width: 45%;">Linux 64 Bit</a>&nbsp;
-				    	<a href="{{page.download.lin32}}"
-				    	class="btn btn-primary btn-large"
-				    	style="width:20%;">32 Bit</a></td>
+						<td style="text-align: center;">
+						<a
+						  rel="popover"
+				    	data-content="This is an Eclipse update site URL, which you need to paste into the update manager within Eclipse!"
+				    	data-original-title="Right-click and 'Copy Link'"
+						  href="{{page.updateSite.milestone}}"
+				    	class="has-popover btn btn-primary btn-large"
+				    	style="width: 70%;">Latest Milestone</a></td>
 				    </tr>
 				    <tr>
-				    	<td style="text-align: center; white-space: nowrap;">
-				    	<a href="{{page.download.win64}}"
-				    	class="btn btn-primary btn-large"
-				    	style="width: 45%;">Windows 64 Bit</a>&nbsp;
-				    	<a href="{{page.download.win32}}"
-				    	class="btn btn-primary btn-large"
-				    	style="width:20%;">32 Bit</a></td>
+						<td style="text-align: center;">
+						<a
+							rel="popover"
+				    	data-content="This is an Eclipse update site URL, which you need to paste into the update manager within Eclipse!"
+				    	data-original-title="Right-click and 'Copy Link'"
+							href="{{page.updateSite.bleeding}}"
+				    	class="has-popover btn btn-primary btn-large"
+				    	style="width: 70%;">Bleeding Edge!</a></td>
 				    </tr>
 				</tbody>
-		    </table>
-    </div>
-	<div class="span1">&nbsp;</div>
+			    </table>
+	    </div>
+	    <div class="span1">&nbsp;</div>
+	    <div class="span4">
+			    <table class="pricing">
+					<tfoot>
+					    <tr>
+							<td></td>
+					    </tr>
+					</tfoot>
+					<tbody>
+					    <tr>
+							<td class="focus">Full Eclipse <span>Just Download and Unzip</span></td>
+					    </tr>
+					    <tr>
+					    	<td style="text-align: center; white-space: nowrap;">
+					    	<a href="{{page.download.osx64}}"
+					    	class="btn btn-primary btn-large" style="width: 45%;">OS X 64 Bit</a>&nbsp;
+					    	<a href="{{page.download.osx32}}"
+					    	class="btn btn-primary btn-large"
+					    	style="width:20%;">32 Bit</a></td>
+					    </tr>
+					    <tr>
+					    	<td style="text-align: center; white-space: nowrap;">
+					    	<a href="{{page.download.lin64}}"
+					    	class="btn btn-primary btn-large"
+					    	style="width: 45%;">Linux 64 Bit</a>&nbsp;
+					    	<a href="{{page.download.lin32}}"
+					    	class="btn btn-primary btn-large"
+					    	style="width:20%;">32 Bit</a></td>
+					    </tr>
+					    <tr>
+					    	<td style="text-align: center; white-space: nowrap;">
+					    	<a href="{{page.download.win64}}"
+					    	class="btn btn-primary btn-large"
+					    	style="width: 45%;">Windows 64 Bit</a>&nbsp;
+					    	<a href="{{page.download.win32}}"
+					    	class="btn btn-primary btn-large"
+					    	style="width:20%;">32 Bit</a></td>
+					    </tr>
+					</tbody>
+			    </table>
+	    </div>
+		<div class="span1">&nbsp;</div>
+	</div>
 </div>
 <div class="container clearfix">
 	{{content}}
