--- a/Website/de.itemis.jee.websitenew/_includes/footer.html
+++ b/Website/de.itemis.jee.websitenew/_includes/footer.html
@@ -4,21 +4,14 @@
       <div class="container">
         <div class="row">
           <div class="span6">
-            <h3 class="footer-links-header">Quick Links</h3>
             <ul class="footer-links clearfix">
-              <li><a href="http://www.eclipse.org/legal/privacy.php">Privacy Policy</a></li>
-              <li><a href="http://www.eclipse.org/legal/termsofuse.php">Terms of Use</a></li>
-              <li><a href="http://www.eclipse.org/legal/copyright.php">Copyright Agent</a></li>
-              <li><a href="http://www.eclipse.org/legal/">Legal</a></li>
-            </ul>
-            <ul class="footer-links clearfix">
-              <li><a href="http://www.eclipse.org">Eclipse Home</a></li>
-              <li><a href="http://marketplace.eclipse.org/">Market Place</a></li>
-              <li><a href="http://live.eclipse.org/">Eclipse Live</a></li>
-              <li><a href="http://www.planeteclipse.org/">Eclipse Planet</a></li>
+              <li><a href="{{ site.baseurl }}/impressum.html">Impressum</a></li>
             </ul>
           </div>
           <div class="span6">
+            <ul class="footer-links clearfix">
+              <li><a href="{{ site.baseurl }}/kontakt.html">Kontakt</a></li>
+            </ul>
           </div>
         </div>
       </div>
@@ -38,21 +31,4 @@
   <script src="{{ site.baseurl }}/js/lang-xtend.js" type="text/javascript"></script>
   <script src="{{ site.baseurl }}/js/lang-common.js" type="text/javascript"></script>
   <script src="{{ site.baseurl }}/js/custom.js" type="text/javascript"></script>
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
-  <script type="text/javascript">
-    var _gaq = _gaq || [];  
-      _gaq.push([ '_setAccount', 'UA-2429174-3' ]);
-    _gaq.push([ '_trackPageview' ]);
-    (function() {
-      var ga = document.createElement('script');
-      ga.type = 'text/javascript';
-      ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl'
-          : 'http://www')
-          + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0];
-      s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
-
 </footer>
