--- a/Website/de.itemis.jee.websitenew/_includes/head.html
+++ b/Website/de.itemis.jee.websitenew/_includes/head.html
@@ -14,6 +14,7 @@
 	
 	<!-- Le fav and touch icons -->
 	<link rel="shortcut icon" href="{{ site.baseurl }}/images/favicon.png">
+	<link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/itemis.png" type="image/png" />
 	
 	<link href="{{ site.baseurl }}/css/bootstrap.css" rel="stylesheet" type='text/css'>
 	<link href="{{ site.baseurl }}/css/bootstrap-responsive.css" rel="stylesheet" type='text/css'>
