--- a/Website/de.itemis.jee.websitenew/_includes/footer.html
+++ b/Website/de.itemis.jee.websitenew/_includes/footer.html
@@ -1,19 +1,17 @@
-<footer class="site-footer">
+<footer>
   <div id="extra">
-    <div class="inner">
       <div class="container">
         <div class="row">
-          <div class="span6">
-            <ul class="footer-links clearfix">
+          <div class="col-md-6">
+            <ul class="clearfix">
               <li><a href="{{ site.baseurl }}/impressum.html">Impressum</a></li>
             </ul>
           </div>
-          <div class="span6">
-            <ul class="footer-links clearfix">
+          <div class="col-md-6">
+            <ul class="clearfix">
               <li><a href="{{ site.baseurl }}/kontakt.html">Kontakt</a></li>
             </ul>
           </div>
-        </div>
       </div>
     </div>
   </div>
@@ -22,11 +20,10 @@
       ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
   
-  <script src="{{ site.baseurl }}/js/jquery-1.7.1.min.js"></script>
+  <script src="{{ site.baseurl }}/js/jquery.min.js"></script>
   <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
   <script src="{{ site.baseurl }}/js/jquery.easing.1.3.js" type="text/javascript"></script>
   <script src="{{ site.baseurl }}/js/jquery.prettyPhoto.js" type="text/javascript"></script>
-  <script src="{{ site.baseurl }}/js/twitter.js" type="text/javascript"></script>
   <script src="{{ site.baseurl }}/js/prettify.js" type="text/javascript"></script>
   <script src="{{ site.baseurl }}/js/lang-xtend.js" type="text/javascript"></script>
   <script src="{{ site.baseurl }}/js/lang-common.js" type="text/javascript"></script>
