--- a/Website/de.itemis.jee.websitenew/_includes/header.html
+++ b/Website/de.itemis.jee.websitenew/_includes/header.html
@@ -1,25 +1,26 @@
 <header class="site-header">
+	<nav class="navbar navbar-default">
+		<div class="container">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span> 
+					<span class="icon-bar"></span>
+				</button>
+				<a class="brand" href="{{ site.baseurl }}/index.html"><img alt="JEE-Generator" src="{{ site.baseurl }}/images/JavaEE-Generator-Transparent.gif"></a>
+			</div>
 
-  <!-- Navbar -->
-  <div class="navbar navbar-fixed-top"
-    style="border-bottom: 1px solid #000;">
-    <div class="navbar-inner">
-      <div class="container">
-        <a class="btn btn-navbar" data-toggle="collapse"
-          data-target=".nav-collapse"> <span class="icon-bar"></span> <span
-          class="icon-bar"></span> <span class="icon-bar"></span>
-        </a> <a class="brand" href="{{ site.baseurl }}/index.html"><img alt="JEE-Generator" src="{{ site.baseurl }}/images/JavaEE-Generator-Transparent.gif"></a>
-        <div class="nav-collapse collapse" style="height: 0px;">
-          <ul class="nav">
-            <li ><a href="{{ site.baseurl }}/aboutus.html">About us</a></li>
-            <li ><a href="{{ site.baseurl }}/documentation/index.html">Documentation</a></li>
-            <li ><a href="{{ site.baseurl }}/download.html">Download</a></li>
-          </ul>
-        </div>
-        <!--/.nav-collapse -->
-      </div>
-    </div>
-  </div>
-  <!-- Navbar End -->
-
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav">
+					<li><a href="{{ site.baseurl }}/aboutus.html">About us</a></li>
+					<li><a href="{{ site.baseurl }}/documentation/index.html">Documentation</a></li>
+					<li><a href="{{ site.baseurl }}/download.html">Download</a></li>
+				</ul>
+			</div>
+			<!-- /.navbar-collapse -->
+		</div>
+	</nav>
 </header>
