--- a/Website/de.itemis.jee.websitenew/_layouts/documentation.html
+++ b/Website/de.itemis.jee.websitenew/_layouts/documentation.html
@@ -4,16 +4,16 @@ layout: default
 <div class="page-content">
   <div class="wrapper">
   	<div id="page">  
-			<div class="inner">
-				<div id="maincontainer" class="container">
-          <div class="span3" style="margin-left: 0px;">
-            {% include documentation-menu.md %}
-          </div>
-					<div class="span8 doc-contents">
-						{{ content }}
-					</div>
+		<div class="inner">
+			<div id="maincontainer" class="container">
+				<div class="col-md-3" style="margin-left: 0px;">
+					{% include documentation-menu.md %}
 				</div>
-		  </div>
+				<div class="col-md-8 doc-contents">
+					{{ content }}
+				</div>
+			</div>
 		</div>
+	</div>
   </div>
 </div>
