--- a/Website/de.itemis.jee.websitenew/_layouts/download.html
+++ b/Website/de.itemis.jee.websitenew/_layouts/download.html
@@ -17,8 +17,8 @@ download:
 <div class="downloads">
 	<div class="container clearfix">
 		<!--table one starts-->
-		<div class="span1">&nbsp;</div>
-	    <div class="span4">
+		<div class="col-md-1">&nbsp;</div>
+	    <div class="col-md-4">
 			    <table class="pricing">
 					<tfoot>
 					    <tr>
@@ -36,7 +36,7 @@ download:
 				    	data-content="This is an Eclipse update site URL, which you need to paste into the update manager within Eclipse!"
 				    	data-original-title="Right-click and 'Copy Link'"
 				    	href="{{page.updateSite.release}}"
-				    	class="has-popover btn btn-primary btn-large"
+				    	class="has-popover btn btn-primary btn-lg"
 				    	style="width: 70%;">Latest Release</a></td>
 				    </tr>
 				    <tr>
@@ -46,7 +46,7 @@ download:
 				    	data-content="This is an Eclipse update site URL, which you need to paste into the update manager within Eclipse!"
 				    	data-original-title="Right-click and 'Copy Link'"
 						  href="{{page.updateSite.milestone}}"
-				    	class="has-popover btn btn-primary btn-large"
+				    	class="has-popover btn btn-primary btn-lg"
 				    	style="width: 70%;">Latest Milestone</a></td>
 				    </tr>
 				    <tr>
@@ -56,14 +56,14 @@ download:
 				    	data-content="This is an Eclipse update site URL, which you need to paste into the update manager within Eclipse!"
 				    	data-original-title="Right-click and 'Copy Link'"
 							href="{{page.updateSite.bleeding}}"
-				    	class="has-popover btn btn-primary btn-large"
+				    	class="has-popover btn btn-primary btn-lg"
 				    	style="width: 70%;">Bleeding Edge!</a></td>
 				    </tr>
 				</tbody>
 			    </table>
 	    </div>
-	    <div class="span1">&nbsp;</div>
-	    <div class="span4">
+	    <div class="col-md-1">&nbsp;</div>
+	    <div class="col-md-4">
 			    <table class="pricing">
 					<tfoot>
 					    <tr>
@@ -76,34 +76,30 @@ download:
 					    </tr>
 					    <tr>
 					    	<td style="text-align: center; white-space: nowrap;">
-					    	<a href="{{page.download.osx64}}"
-					    	class="btn btn-primary btn-large" style="width: 45%;">OS X 64 Bit</a>&nbsp;
-					    	<a href="{{page.download.osx32}}"
-					    	class="btn btn-primary btn-large"
-					    	style="width:20%;">32 Bit</a></td>
+					    	<a href="{{page.download.osx64}}" style="width: 45%;"
+					    	class="btn btn-primary btn-lg">OS X 64 Bit</a>&nbsp;
+					    	<a href="{{page.download.osx32}}" style="width: 25%;"
+					    	class="btn btn-primary btn-lg">32 Bit</a></td>
 					    </tr>
 					    <tr>
 					    	<td style="text-align: center; white-space: nowrap;">
-					    	<a href="{{page.download.lin64}}"
-					    	class="btn btn-primary btn-large"
-					    	style="width: 45%;">Linux 64 Bit</a>&nbsp;
-					    	<a href="{{page.download.lin32}}"
-					    	class="btn btn-primary btn-large"
-					    	style="width:20%;">32 Bit</a></td>
+					    	<a href="{{page.download.lin64}}" style="width: 45%;"
+					    	class="btn btn-primary btn-lg">Linux 64 Bit</a>&nbsp;
+					    	<a href="{{page.download.lin32}}" style="width: 25%;"
+					    	class="btn btn-primary btn-lg">32 Bit</a></td>
 					    </tr>
 					    <tr>
 					    	<td style="text-align: center; white-space: nowrap;">
-					    	<a href="{{page.download.win64}}"
-					    	class="btn btn-primary btn-large"
-					    	style="width: 45%;">Windows 64 Bit</a>&nbsp;
-					    	<a href="{{page.download.win32}}"
-					    	class="btn btn-primary btn-large"
-					    	style="width:20%;">32 Bit</a></td>
+					    	<a href="{{page.download.win64}}" style="width: 45%;"
+					    	class="btn btn-primary btn-lg">Windows 64 Bit</a>&nbsp;
+					    	<a href="{{page.download.win32}}" style="width: 25%;"
+					    	class="btn btn-primary btn-lg"
+					    	>32 Bit</a></td>
 					    </tr>
 					</tbody>
 			    </table>
 	    </div>
-		<div class="span1">&nbsp;</div>
+		<div class="col-md-1">&nbsp;</div>
 	</div>
 </div>
 <div class="container clearfix">
@@ -112,8 +108,8 @@ download:
 <div class="container">
 	<h2>FAQs</h2>
 	<hr />
-	<div class="span1">&nbsp;</div>
-	<div class="span9" id="faq">
+	<div class="col-md-1">&nbsp;</div>
+	<div class="col-md-9" id="faq">
 		<div class="accordion" id="accordion2">
 		    <div class="accordion-group">
 		      <div class="accordion-heading">
@@ -142,6 +138,6 @@ download:
 		    </div>
 		</div>
 		</div>
-	<div class="span1">&nbsp;</div>
+	<div class="col-md-1">&nbsp;</div>
 </div>
 </div>
