--- a/Website/de.itemis.jee.websitenew/_includes/header.html
+++ b/Website/de.itemis.jee.websitenew/_includes/header.html
@@ -15,8 +15,8 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li><a href="{{ site.baseurl }}/aboutus.html">About us</a></li>
-					<li><a href="{{ site.baseurl }}/documentation/index.html">Documentation</a></li>
+					<li><a href="{{ site.baseurl }}/aboutus.html">&Uuml;ber uns</a></li>
+					<li><a href="{{ site.baseurl }}/documentation/index.html">Dokumentation</a></li>
 					<li><a href="{{ site.baseurl }}/download.html">Download</a></li>
 				</ul>
 			</div>
