--- a/Website/de.itemis.jee.websitenew/_includes/header.html
+++ b/Website/de.itemis.jee.websitenew/_includes/header.html
@@ -19,6 +19,11 @@
 					<li><a href="{{ site.baseurl }}/documentation/index.html">Dokumentation</a></li>
 					<li><a href="{{ site.baseurl }}/download.html">Download</a></li>
 				</ul>
+				<ul class="nav navbar-nav navbar-right">
+              		<li><a href="{{ site.baseurl }}/impressum.html">Impressum</a></li>
+              		<li><a href="{{ site.baseurl }}/kontakt.html">Kontakt</a></li>
+            	</ul>
+          </div>
 			</div>
 			<!-- /.navbar-collapse -->
 		</div>
