--- a/Website/de.itemis.jee.websitenew/_includes/head.html
+++ b/Website/de.itemis.jee.websitenew/_includes/head.html
@@ -11,8 +11,8 @@
 	<!--[if lt IE 9]>
 	  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-	
-	<!-- Le fav and touch icons -->
+
+	<link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/favicon.png" type="image/png" />
 	<link rel="shortcut icon" href="{{ site.baseurl }}/images/favicon.png">
 
 	<link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet" type='text/css'>
@@ -21,6 +21,7 @@
 	<link href="{{ site.baseurl }}/css/prettyPhoto.css" rel="stylesheet" media="screen" type='text/css'>
 	<link href="{{ site.baseurl }}/css/prettify.css" type="text/css" rel="stylesheet"/>
 	<link href="{{ site.baseurl }}/css/style.css" rel="stylesheet" type='text/css'>
+
 	<!--[if lt IE 9]>
 	<link href="/css/iebugs.css" rel="stylesheet" type='text/css'>
 	<![endif]-->
