--- a/Website/de.itemis.jee.websitenew/css/style.scss
+++ b/Website/de.itemis.jee.websitenew/css/style.scss
@@ -52,7 +52,6 @@ h3 {
 }
 
 h4 {
-	margin-top: 14px;
 	margin-bottom: 2px;
 	font-size: 17px;
 	font-weight: bold;
@@ -222,7 +221,6 @@ ul {
 }
 
 .downloads {
-	padding-top: 50px;
 	background: url('{{ site.baseurl }}/images/download_background.jpg') #00457c;
 }
 
@@ -275,7 +273,6 @@ ul {
 
 .pricing {
 	font-family: 'Lato', sans-serif;
-	margin-bottom: 40px;
 	border: 1px solid #d4d4d4;
 	border-width: 1px 1px 4px 1px;
 
@@ -355,7 +352,6 @@ ul {
 .pricing td.focus span {
 	font-size: 10px;
 	display: block;
-	margin-top: 5px;
 }
 
 .pricing td h6 {
@@ -374,11 +370,11 @@ ul {
 
 table {
 	background: #eaebec;
-	margin: 20px;
 	border: #ccc 1px solid;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
+	margin: 3em;
 }
 
 table th {
@@ -453,54 +449,9 @@ div#aboutUsImage img {
 	margin-right: 10px;
 }
 
-/* Footer */
-#extra {
-	border-top: 1px solid #000;
-	background: linear-gradient(to right, rgba(0, 69, 124, 0.95) 0%, rgba(51, 106, 150, 0.95) 50%, rgba(0, 69, 124, 0.95) 100%) repeat scroll 0 0 #00457c;
-
-	color: #fff;
-	font-weight: 400;
-	line-height: 1.3em;
-	font-style: normal;
-	word-spacing: 1px;
-	height: 60px;
-}
-
-#extra h3 {
-	font-weight: 400;
-	border-bottom: 1px solid #00457c;
-	background: linear-gradient(to right, rgba(0, 69, 124, 0.95) 0%, rgba(51, 106, 150, 0.95) 50%, rgba(0, 69, 124, 0.95) 100%) repeat scroll 0 0 #00457c;
-	padding: 5px;
-}
-
-footer ul {
-	width: 49%;
-	display: inline-block;
-	margin: 0;
-	list-style: none;
-}
-
-footer li {
-	margin-top: 1.25em;
-}
-
-footer a {
-	color: #fff;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 80px;
-}
-
-footer {
-  	position: absolute;
-  	bottom: 0;
-  	width: 100%;
-  	/* Set the fixed height of the footer here */
-  	background-color: #f5f5f5;
+.container {
+	h1 {
+		margin-top: 1em;
+		margin-bottom: 1em;
+	}
 }
